Updates to styling

--- a/pollster/templates/pages/index.html
+++ b/pollster/templates/pages/index.html
@@ -15,7 +15,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0"><a href ="{% url 'polls:voting' %}" type="button" class="btn btn-lg btn-light">Vote Now</a></p>
+                <p class="masthead-subheading font-weight-light mb-0"><a href ="polls/1" type="button" class="btn btn-lg btn-light">Vote Now</a></p>
             </div>
         </header>
 {% endblock %} 
