--- a/pollster/polls/static/css/styles.css
+++ b/pollster/polls/static/css/styles.css
@@ -6083,7 +6083,7 @@ button.bg-primary:focus {
 }
 
 .bg-secondary {
-  background-color: #2c3e50 !important;
+  background-color: #bd2130 !important;
 }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
