--- a/pollster/templates/polls/detail.html
+++ b/pollster/templates/polls/detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<a class ="btn btn-secondary btn-sm mb-3" href ="{% url 'polls:index' %}">Back To Polls</a>
-<h1 class ="text-center mb-3">{{ question.question_text }}</h1>
+<div class="container d-flex align-items-center flex-column" style="padding-top: 120px	">
+<!--<h1 class ="text-center mb-3">{{ question.question_text }}</h1>-->
 
 {% if error_message %}
 <p class ="alert alert-danger">
@@ -25,10 +25,11 @@
 	</div>
 	{% endfor %}
 	{% if already_visited %}
-	<input type ="submit" disabled value ="Vote" class ="btn btn-success btn-lg btn-block mt-4" />
+	<a class="btn btn-primary" href="./results">Results</a>
 	{% else %}
 	<input type ="submit" value ="Vote" class ="btn btn-success btn-lg btn-block mt-4" />
 	{% endif %}
 </form>
+</div>
 {% endblock %}
 
